fix overflow errors on safari
closes #28

--- a/style/header.scss
+++ b/style/header.scss
@@ -135,7 +135,7 @@ $header-height: 92px;
     .hamburger-links {
         position: fixed;
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: row wrap;
         width: 100%;
         height: 100%;
         z-index: 200;
@@ -184,6 +184,7 @@ $header-height: 92px;
 
                 img {
                     height: 100%;
+                    max-height: 60px;
                 }
             }
 
@@ -200,7 +201,7 @@ $header-height: 92px;
             .footer {
                 display: flex;
                 background-color: white;
-                flex-flow: row nowrap;
+                flex-flow: row-reverse nowrap;
                 padding: 0rem;
                 flex-grow: 1;
                 align-items: flex-end;
